Fix: sandbox z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,3 +51,7 @@ a:hover {
 .top-svg {
   display: none;
 }
+
+#sandbox {
+  z-index: 100;
+}
